# trader

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  start.bat
core/: __init__.py  compliance.py  compliance_test.py  host.py  news.py  risk.py  types.py
robots/: __init__.py  base.py  loader.py
robots/fxgerard-bos-continuation/: config.yaml  manifest.yaml  strategy.py
robots/fxgerard-bos-continuation/tests/: test_strategy.py
robots/fxgerard-sweep-choch/: config.yaml  manifest.yaml  strategy.py
robots/fxgerard-vwap-reversal/: config.yaml  manifest.yaml  strategy.py
robots/fxgerard-vwap-reversal/mql5/: FxGerardClient.mq5  README.md
robots/fxgerard-vwap-reversal/tests/: test_strategy.py
scripts/: analyze_backtest.py  create_sample_report.py  start-docker.sh  start-live.sh  start-paper.sh
services/: __init__.py  analyst.py  backtest_analyst.py  backtest_parser.py  backtest_parser_test.py
services/api/: main.py  requirements.txt
services/telegram/: Dockerfile  bot.py  requirements.txt
tests/: test_compliance.py
tests/fixtures/: sample_mt5_report.html
